objects/EmailResultSummary__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Email Result Summaries</relationshipLabel>
        <relationshipName>EmailResultSummaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateFirstSent__c</fullName>
        <label>Date First Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmailSubject__c</fullName>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalBounced__c</fullName>
        <label>Total Bounced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOpened__c</fullName>
        <label>Total Opened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalSent__c</fullName>
        <label>Total Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalUnsubscribed__c</fullName>
        <label>Total Unsubscribed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>